# domo-sdk-python

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/domo_sdk/: __init__.py  domo.py  exceptions.py
src/domo_sdk/async_clients/: __init__.py  accounts.py  activity_log.py  alerts.py  base.py  cards.py  connectors.py  dataflows.py  datasets.py  embed.py  files.py  groups.py  pages.py  projects.py  roles.py  s3_export.py  search.py  streams.py  users.py  workflows.py
src/domo_sdk/async_clients/ai/: __init__.py  analysis.py  media.py  messages.py  text.py
src/domo_sdk/clients/: __init__.py  accounts.py  activity_log.py  alerts.py  base.py  cards.py  connectors.py  dataflows.py  datasets.py  embed.py  files.py  groups.py  pages.py  projects.py  roles.py  s3_export.py  search.py  streams.py  users.py  workflows.py
src/domo_sdk/clients/ai/: __init__.py  analysis.py  media.py  messages.py  text.py
src/domo_sdk/models/: __init__.py  accounts.py  activity_log.py  ai.py  alerts.py  base.py  cards.py  common.py  dataflows.py  datasets.py  embed.py  files.py  groups.py  pages.py  projects.py  roles.py  search.py  streams.py  users.py  workflows.py
src/domo_sdk/transport/: __init__.py  async_transport.py  auth.py  base.py  sync_transport.py
src/domo_sdk/utils/: pagination.py  schema.py  type_conversion.py
tests/: conftest.py  test_utilities_type_conversion.py
tests/test_async_clients/: test_ai.py  test_datasets.py  test_files.py  test_groups.py  test_pages.py  test_search.py  test_users.py
tests/test_clients/: test_ai.py  test_datasets.py  test_files.py  test_roles.py  test_search.py
tests/test_models/: test_ai.py  test_datasets.py  test_roles.py  test_search.py
tests/test_transport/: test_auth.py
