[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domo-sdk"
dynamic = ["version"]
description = "Modern Python SDK for the Domo API — async support, Pydantic models, developer token auth"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WKS", email = "dev@wksusa.com" },
]
keywords = ["domo", "api", "sdk", "data", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "requests-toolbelt>=0.9.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/wksusa/domo-sdk-python"
Documentation = "https://github.com/wksusa/domo-sdk-python#readme"
Repository = "https://github.com/wksusa/domo-sdk-python"
Issues = "https://github.com/wksusa/domo-sdk-python/issues"

[tool.hatch.version]
path = "src/domo_sdk/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/domo_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    'ignore:Field name "schema".*shadows an attribute:UserWarning',
]
